--- a/.env
+++ b/.env
@@ -4,13 +4,11 @@ PORT=9011
 DBA_HOST=localhost
 DBA_USER=root
 DBA_PASS=P455W0RD
-DBA_DATABASE=worldbex
+DBA_DATABASE=worldbex-dev
 
 userId = 9e37be6c-1858-11ed-ae22-027d61b278ac
-eventId = b6ad7407-fea8-11ec-8bf4-027d61b278ac
-//wb - b6ad7407-fea8-11ec-8bf4-027d61b278ac
-//moon - adffc8b1-c5f0-11ec-9461-0ebf1fc6bf7e
-
+eventId = 8443e380-7c29-11ed-8dce-0ebf1fc6bf7e
+eventTag = WORLDBEX2023
 areacode = 21
 //20 - online
 //21 - worldtrade
